samples/_failures_safe/1761435144_1fad82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bbf15c3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_5bbf15c3.c:175:23: error: expected ‘)’ at end of input
  175 |         if (token.type
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_5bbf15c3.c:175:9: error: expected declaration or statement at end of input
  175 |         if (token.type
      |         ^~
./samples/SAFE/__tmp_5bbf15c3.c:175:9: error: expected declaration or statement at end of input
